--- a/musica.html
+++ b/musica.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrabazaar - Inicio</title>
+    <title>Astrabazaar - Música</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Estilos CSS van aquí */
@@ -113,12 +113,13 @@ nav a:hover {
 
 
     </style>
+
 </head>
 
 <body>
 
     <header>
-      <nav>
+       <nav>
     <a href="index.html">
         <img src="https://i.postimg.cc/Sn0SNPTH/logo.png" alt="Logo de AstraBazaar" style="border-radius: 50%; width: 100px; height: 100px; object-fit: cover;">
     </a>
@@ -135,34 +136,37 @@ nav a:hover {
         <div class="bar"></div>
     </div>
 </nav>
+
 </header>
 
 
-
     <main>
-        <h1>Bienvenido a AstraBazaar</h1>
-        <p>Explora nuestra plataforma para descubrir música, productos, juegos y más.</p>
-        <iframe src="https://www.youtube.com/embed/Bvnc7fcuUbs?autoplay=1&mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>Descubre nueva música</h1>
+        <p>Explora nuestra selección de canciones y artistas destacados.</p>
+        <div class="music-list">
+            <div class="music-item">
+                <h2>Canción 1</h2>
+                <p>Descripción de la canción 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="music-item">
+                <h2>Canción 2</h2>
+                <p>Descripción de la canción 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="music-item">
+                <h2>Canción 3</h2>
+                <p>Descripción de la canción 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="music-item">
+                <h2>Canción 4</h2>
+                <p>Descripción de la canción 4 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <!-- Agrega más elementos según sea necesario -->
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2024 Astrabazaar - Todos los derechos reservados</p>
     </footer>
-
-    <script>
-        const menuToggle = document.querySelector('.menu-toggle');
-        const navLinks = document.querySelector('.nav-links');
-
-        menuToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('active');
-        });
-
-a {
-    cursor: pointer;
-}
-
-
-    </script>
 
 </body>
 
