--- a/musica.html
+++ b/musica.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrabazaar - Música</title>
+    <title>Contacto - Astrabazaar</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Estilos CSS van aquí */
@@ -29,52 +29,29 @@
             width: 100%;
         }
 
-       /* Estilos CSS van aquí */
-nav {
-    background-color: #34495e;
-    border-radius: 8px;
-    margin: 20px auto 0;
-    display: flex;
-    justify-content: space-between; /* Cambiado a space-between */
-    align-items: center;
-    width: 80%;
-    max-width: 800px;
-}
+        nav {
+            background-color: #34495e;
+            border-radius: 8px;
+            margin: 20px auto 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 80%;
+            max-width: 800px;
+        }
 
-.nav-links {
-    display: flex; /* Agregado */
-    justify-content: space-between; /* Agregado */
-    width: 70%; /* Cambiado */
-}
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            text-transform: uppercase;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
 
-nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
-
-nav a:hover {
-    background-color: #1abc9c;
-}
-
-/* Agregado */
-.menu-toggle {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-}
-
-/* Agregado */
-.menu-toggle .bar {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    margin: 3px 0;
-}
-
+        nav a:hover {
+            background-color: #1abc9c;
+        }
 
         main {
             text-align: center;
@@ -83,23 +60,29 @@ nav a:hover {
             max-width: 800px;
         }
 
-        h1 {
-            font-size: 36px;
-            color: #333;
-            margin-bottom: 20px;
+        form {
+            margin-top: 20px;
         }
 
-        p {
-            font-size: 18px;
-            color: #666;
-            margin-bottom: 40px;
-        }
-
-        iframe {
-            border: none;
+        input,
+        textarea {
             width: 100%;
-            max-width: 800px;
-            height: 400px;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            background-color: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #1abc9c;
         }
 
         footer {
@@ -108,14 +91,10 @@ nav a:hover {
             padding: 20px;
             text-align: center;
             width: 100%;
+            margin-top: auto; /* Alinea el pie de página al fondo */
         }
-
-
-
     </style>
-
 </head>
-
 <body>
 
     <header>
