--- a/index.html
+++ b/index.html
@@ -93,6 +93,26 @@
             width: 100%;
             margin-top: auto; /* Alinea el pie de página al fondo */
         }
+
+
+
+.whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25d366;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 50px;
+            font-weight: bold;
+            text-decoration: none;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .whatsapp-button:hover {
+            background-color: #128c7e;
+        }
+
     </style>
 </head>
 <body>
@@ -103,11 +123,11 @@
         <img src="https://i.postimg.cc/Sn0SNPTH/logo.png" alt="Logo de AstraBazaar" style="border-radius: 50%; width: 100px; height: 100px; object-fit: cover;">
     </a>
     <div class="nav-links">
-        <a href="contacto.html">contacto</a>
+        <a href="preguntas.html">preguntas</a>
         <a href="musica.html">Musica</a>
-        <a href="tienda.html">Tienda</a>
-        <a href="juegos.html">Juegos</a>
-        <a href="otros.html">Otros</a>
+        <a href="https://tutienda.portafolio.digital/shop/297c420d-3065-499a-8e1c-ba31b9f70839x0fgx">Tienda</a>
+        <a href="construccion.html">Juegos</a>
+        <a href="construccion.html">Otros</a>
     </div>
     <div class="menu-toggle">
         <div class="bar"></div>
@@ -145,13 +165,7 @@
     </main>
 
 
-<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  intent="WELCOME"
-  chat-title="AstraBot"
-  agent-id="64b7b368-7333-4358-a0e8-d13d088fc76c"
-  language-code="es"
-></df-messenger>
+
 
 
 
@@ -160,26 +174,24 @@
         <p>&copy; 2024 Astrabazaar - Todos los derechos reservados</p>
     </footer>
 
+  <!-- Botón de WhatsApp -->
+    <a href="https://wa.me/+573005165566" class="whatsapp-button" target="_blank">¡Chatea con nosotros en WhatsApp!</a>
+    <!-- Reemplaza XXXXXXXXXX con el número de WhatsApp al que deseas dirigir el chat -->
 
+    <!-- Fin del contenido de la página -->
 
-
-
-
+    <!-- Agrega jQuery (requerido por Slick Carousel) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Agrega la librería Slick Carousel -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script>
-        const menuToggle = document.querySelector('.menu-toggle');
-        const navLinks = document.querySelector('.nav-links');
-
-        menuToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('active');
+        // Inicializa el slider de trajes de baño
+        $(document).ready(function(){
+            $('.slider').slick();
         });
-
-a {
-    cursor: pointer;
-}
-
-
     </script>
 
 </body>
 
 </html>
+
