--- a/musica.html
+++ b/musica.html
@@ -145,6 +145,25 @@
         .radio-list img {
             max-width: 30%;
         }
+
+
+.whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25d366;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 50px;
+            font-weight: bold;
+            text-decoration: none;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .whatsapp-button:hover {
+            background-color: #128c7e;
+        }
+
     </style>
 </head>
 <!----------------------------fin de head------------------------------->
@@ -172,11 +191,11 @@
     </a>
 
     <div class="nav-links">
-        <a href="contacto.html">contacto</a>
+        <a href="preguntas.html">preguntas</a>
         <a href="musica.html">Musica</a>
-        <a href="tienda.html">Tienda</a>
-        <a href="juegos.html">Juegos</a>
-        <a href="otros.html">Otros</a>
+        <a href="https://tutienda.portafolio.digital/shop/297c420d-3065-499a-8e1c-ba31b9f70839x0fgx">Tienda</a>
+        <a href="construccion.html">Juegos</a>
+        <a href="construccion.html">Otros</a>
     </div>
     <div class="menu-toggle">
         <div class="bar"></div>
@@ -246,7 +265,22 @@
 <!----------------------------fin de pie de pagina------------------------------->
 
 
+<!-- Botón de WhatsApp -->
+    <a href="https://wa.me/+573005165566" class="whatsapp-button" target="_blank">¡Chatea con nosotros en WhatsApp!</a>
+    <!-- Reemplaza XXXXXXXXXX con el número de WhatsApp al que deseas dirigir el chat -->
 
+    <!-- Fin del contenido de la página -->
+
+    <!-- Agrega jQuery (requerido por Slick Carousel) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Agrega la librería Slick Carousel -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script>
+        // Inicializa el slider de trajes de baño
+        $(document).ready(function(){
+            $('.slider').slick();
+        });
+    </script>
 
 </body>
 <!----------------------------fin de cuerpo------------------------------->
