--- a/tienda.html
+++ b/tienda.html
@@ -196,11 +196,11 @@
         <img src="https://i.postimg.cc/Sn0SNPTH/logo.png" alt="Logo de AstraBazaar" style="border-radius: 50%; width: 100px; height: 100px; object-fit: cover;">
     </a>
     <div class="nav-links">
-        <a href="contacto.html">contacto</a>
+        <a href="preguntas.html">preguntas</a>
         <a href="musica.html">Musica</a>
-        <a href="tienda.html">Tienda</a>
-        <a href="juegos.html">Juegos</a>
-        <a href="otros.html">Otros</a>
+        <a href="https://tutienda.portafolio.digital/shop/297c420d-3065-499a-8e1c-ba31b9f70839x0fgx">Tienda</a>
+        <a href="construccion.html">Juegos</a>
+        <a href="construccion.html">Otros</a>
     </div>
     <div class="menu-toggle">
         <div class="bar"></div>
